syntax = "proto3";

package market.v1;

option go_package = "github.com/anarakinson/go_stonks/stonks_pb/gen/market/v1;market";

import "google/protobuf/timestamp.proto";

// роли пользователей
enum UserRole {
  ROLE_BASIC = 0;
  ROLE_PROFESSIONAL = 1;
  ROLE_WHALE = 2;
}

// Определение сообщения Market (DTO для рынка)
message Market {
    string id = 1;                             // Уникальный идентификатор рынка
    string name = 2;                           // Название рынка (например, "BTC/USD")
    bool enabled = 3;                          // Активен ли рынок для торговли
    repeated UserRole allowed_roles = 4;       // Роли пользователей, которым доступен рынок
    google.protobuf.Timestamp deleted_at = 5;  // Дата удаления (null если не удален)
}
